syntax = "proto3";

package pb;

option go_package = "../internal/pb/";

service UserService {
    rpc RegisterUser(UserRequest) returns (UserResponse);
    rpc AuthenticateUser(AuthRequest) returns (AuthResponse);
    rpc GetUserProfile(UserID) returns (UserProfile);
}

message UserRequest {
    string username = 1;
    string password = 2;
    string email = 3;
}

message UserResponse {
    string id = 1;
    string message = 2;
}

message AuthRequest {
    string username = 1;
    string password = 2;
}

message AuthResponse {
    string token = 1;
    string message = 2;
}

message UserID {
    string id = 1;
}

message UserProfile {
    string id = 1;
    string username = 2;
    string email = 3;
}
